--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# ?????? ??
+# mysql ?????? ??
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_board?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234
